# Document-layout-analyzer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/api/: routes_health.py  routes_ocr.py  schemas.py
backend/core/: config.py  logging_config.py
backend/model/: trained_model.pkl  vectorizer.pkl
backend/services/: classification_service.py  extraction_service.py  health_service.py  ocr_service.py
frontend/: index.html  script.js  style.css
notebooks/: classification.ipynb
tests/: test_classifier.py  test_ocr.py
